<resources>
	<string name="app_name">BestB4</string>
	<string name="action_settings">Settings</string>
	<string name="food_item_icon_description" translatable="false">Food icon</string>
	<string name="food_item_quantity_placeholder" translatable="false">10 litres</string>
	<string name="food_item_name_placeholder" translatable="false">Milk</string>
	<string name="food_item_best_before_placeholder" translatable="false">2019. 06. 07.</string>
	<string name="food_item_expiry_placeholder" translatable="false">2 weeks 10 days</string>
	<string name="newfood_barcode">Barcode</string>
	<string name="newfood_image" translatable="false">New Food Image</string>
	<string name="newfood_name">Name</string>
	<string name="newfood_quantity">Quantity (eq. 1 kg, 300 ml)</string>
	<string name="newfood_expiry_date">Expiry date</string>
	<string name="newfood_save_button">Save</string>
	<string name="new_food_image_title">Select new food icon</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="new_food_icon_desc">New food icon</string>
	<string name="food_detail_placeholder" translatable="false">Milk</string>
	<string name="food_detail_quantity_placeholder" translatable="false">1 litre</string>
	<string name="insertion_date">Insertion date</string>
	<string name="expiry_date">Expiry date</string>
	<string name="food_detail_progress_label">Progress</string>
	<string name="food_notification_title">Your fridge\'s status</string>
	<string name="expired_food_label">Expired food:</string>
	<string name="almost_expired_food_label">Almost expired:</string>
	<string name="notifications_preference">Notifications</string>
	<string name="notifications_preference_desc">Daily notifications for the state of your fridge</string>
	<string name="notifications_frequency_preference">Notify me before expiration (days)</string>
	<string name="delete">Delete</string>
	<string name="already_in_fridge_title">Barcode already in fridge</string>
	<string name="already_in_fridge_desc">Would you like to delete this item or add an another?</string>
	<string name="continue_text">Continue</string>
</resources>
