<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_margin"
>

    <TextView
            android:id="@+id/food_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_margin"
            android:layout_marginTop="8dp"
            android:text="@string/food_item_quantity_placeholder"
            app:layout_constraintStart_toEndOf="@+id/food_item_image"
            app:layout_constraintTop_toBottomOf="@+id/food_item_name"/>

    <TextView
            android:id="@+id/food_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_margin"
            android:layout_marginTop="4dp"
            android:text="@string/food_item_name_placeholder"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/food_item_image"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/food_item_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/item_margin"
            android:contentDescription="@string/food_item_icon_description"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/food_item_best_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/food_item_best_before_placeholder"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/food_item_expiry"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/item_margin"
            android:text="@string/food_item_expiry_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_item_best_before"/>

</android.support.constraint.ConstraintLayout>