<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/food_detail_insertion"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginStart="8dp"
			app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="@+id/barrier" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline3" android:hint="@string/insertion_date"
			android:enabled="false"/>
	<ImageView
			android:layout_width="70dp"
			android:layout_height="70dp" app:srcCompat="@drawable/food"
			android:id="@+id/food_detail_image" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toStartOf="@+id/guideline2"
			android:layout_marginEnd="8dp"/>
	<TextView
			android:text="@string/food_detail_placeholder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/food_detail_name"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
			android:textSize="24sp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/food_detail_quantity" android:layout_marginStart="8dp"
			app:layout_constraintStart_toStartOf="@+id/guideline2"/>
	<android.support.constraint.Guideline
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/guideline" app:layout_constraintGuide_begin="101dp"
			android:orientation="horizontal"/>
	<TextView
			android:text="@string/food_detail_quantity_placeholder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/food_detail_quantity" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="@+id/barrier"
			android:layout_marginEnd="8dp"
			app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"/>
	<android.support.constraint.Barrier
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/barrier" app:barrierDirection="left"/>
	<android.support.constraint.Guideline
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/guideline2" app:layout_constraintGuide_begin="126dp"
			android:orientation="vertical"/>
	<TextView
			android:text="@string/insertion_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/food_detail_insertion_label" android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintEnd_toStartOf="@+id/guideline2"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"
			app:layout_constraintVertical_bias="0.475"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/food_detail_expiry"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="@+id/guideline3" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline8" android:layout_marginStart="8dp"
			app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent" android:hint="@string/expiry_date" android:enabled="false"/>
	<android.support.constraint.Guideline
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/guideline3"
			android:orientation="horizontal"
			app:layout_constraintGuide_begin="162dp"/>
	<android.support.constraint.Guideline
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/guideline8" app:layout_constraintGuide_begin="224dp"
			android:orientation="horizontal"/>
	<android.support.constraint.Guideline
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/guideline4" app:layout_constraintGuide_begin="86dp"
			android:orientation="horizontal"/>
	<android.support.constraint.Guideline
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/guideline5"
			android:orientation="horizontal" app:layout_constraintGuide_begin="287dp"/>
	<TextView
			android:text="@string/expiry_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/food_detail_expiry_label" android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="@+id/guideline3" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintEnd_toStartOf="@+id/guideline2"
			android:layout_marginEnd="8dp"
	/>
	<TextView
			android:text="@string/food_detail_progress_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/food_detail_progress_label" app:layout_constraintEnd_toStartOf="@+id/guideline2"
			android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline5"/>
	<ProgressBar
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/food_detail_progress" android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintStart_toStartOf="@+id/guideline2"
			android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/barrier"
			android:layout_marginEnd="8dp" android:progress="30"/>
</android.support.constraint.ConstraintLayout>